# cwml

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: LoadConfigSymbols.cmake
cmake/cell/: ppu.cmake  sdk.cmake  sprx.cmake
cmake/cell/sprx/: crossplay.cmake  evanspoker.cmake  patchwork.cmake
code/CWLib/: CMakeLists.txt
code/CWLib/src/: Constants.h  DebugVariable.h  Fart.cpp  Fart.h  FartLazy.cpp  FartRO.cpp  FartRO.h  FileList.h  GameConstants.h  InventoryItem.h  LoadingScreen.h  Part.h  PartEmitter.h  PartList.h  PartPhysicsTweak.h  PartPhysicsWorld.h  PartScript.h  PartSwitch.h  PartTypeEnum.h  RandomStream.h  ReadINI.h  Resource.cpp  Resource.h  ResourceDLC.cpp  ResourceDLC.h  ResourceDescriptor.h  ResourceEnums.h  ResourceGuidSubst.cpp  ResourceGuidSubst.h  ResourceLevel.h  ResourceList.h  ResourcePlan.cpp  ResourcePlan.h  ResourceScript.cpp  ResourceScript.h  ResourceSystem.cpp  ResourceSystem.h  ResourceTranslationTable.cpp  ResourceTranslationTable.h  ResourceTypes.h  (+21 more)
code/CWLib/src/cell/: RemotePlay.cpp  gamedata.cpp
code/CWLib/src/network/: NetworkFriendsNP.h  NetworkManager.h  NetworkSignalling.cpp  NetworkSignalling.h  NetworkUtilsNP.cpp  NetworkUtilsNP.h  RNPLoadingTask.h  RNPManager.cpp  RNPManager.h  RNPSendingTask.h
code/CWLib/src/savegame/: Quick.cpp  Quick.h
code/CWLib/src/vm/: ConvertTypes.h  InstanceLayout.cpp  InstanceLayout.h  NativeFunction.h  NativeFunctionCracker.h  NativeRegistry.cpp  NativeRegistry.h  ScriptArguments.h  ScriptContext.cpp  ScriptContext.h  ScriptFunction.cpp  ScriptFunction.h  ScriptInstance.cpp  ScriptInstance.h  ScriptObject.cpp  ScriptObject.h  ScriptVariant.h  VMInstruction.cpp  VMInstruction.h  VMTypes.cpp  VMTypes.h  VirtualMachine.cpp  VirtualMachine.h
code/CWLib/src/win32/: gamedata.cpp
code/CoreLib/: CMakeLists.txt
code/CoreLib/src/: BitUtils.h  BranchDefines.h  CalendarTime.cpp  CalendarTime.h  Clock.cpp  Clock.h  Colour.cpp  Colour.h  CompressionJob.cpp  CompressionJob.h  CritSec.h  DebugLog.h  Directory.cpp  Directory.h  GameUpdateStage.cpp  GameUpdateStage.h  GuidHash.cpp  GuidHash.h  GuidHashMap.cpp  GuidHashMap.h  Hash.cpp  Hash.h  JobManager.cpp  JobManager.h  MMString.h  ParasiticVector.h  ReflectionVisitable.h  Serialise.cpp  Serialise.h  SerialiseEnums.h  SerialiseRevision.h  StringUtil.cpp  StringUtil.h  TextRange.h  TextStream.cpp  TextStream.h  fifo.h  filepath.cpp  filepath.h  refcount.cpp  (+6 more)
code/CoreLib/src/cell/: CritSec.cpp  DebugLog.cpp  fifo.cpp  filepath.cpp  thread.cpp  thread.h
code/CoreLib/src/memory/: Allocator.cpp  Allocator.h  Bucket.h  Memory.cpp  Memory.h
code/CoreLib/src/win32/: CritSec.cpp  DebugLog.cpp  fifo.cpp  filepath.cpp  thread.cpp  thread.h
code/Ib/: CMakeLists.txt
code/Ib/include/Ib/: Emu.h  Hook.h  IO.h  Ib.h  Memory.h  SHA1.h  ScopedHook.h
code/Ib/include/Ib/Assembly/: PowerPC.h
code/Ib/src/: SHA1.cpp  ScopedHook.cpp
code/Ib/src/cell/: Emu.cpp  Hook.cpp  Memory.cpp  Printf.cpp
code/Ib/src/psp2/: Emu.cpp  Hook.cpp
code/Ib/src/win32/: Emu.cpp
code/Spuge/src/: compress.h
code/cwml/: CMakeLists.txt
code/cwml/include/cwml/: Config.h  Plugin.h  cwml.h
code/cwml/src/: cwml.cpp  main_ps3.cpp  main_psp2.cpp
code/cwml/src/cwml/: Context.cpp  Context.h
code/evanspoker/: CMakeLists.txt
code/evanspoker/src/: Evanspoker.cpp  entry.cpp
code/evanspoker/src/asm/: csr.s  loopback.s
code/pctest1/: CMakeLists.txt
code/pctest1/src/: main.cpp
config/lbp2/: defines.txt  ports.cnf  symbols.yml  toc.yml
config/lbp2beta/: defines.txt  ports.cnf  symbols.yml  toc.yml
config/lbp2debug/: ports.cnf  symbols.yml  toc.yml
config/lbpib/: defines.txt  ports.cnf  symbols.yml  toc.yml
config/lbpv/: defines.txt
plugins/CrossPlay/: CMakeLists.txt
plugins/CrossPlay/src/: CrossPlay.cpp  CrossPlay.h  Endian.cpp  Endian.h  Plugin.cpp  WolfSSL.cpp
plugins/CrossPlay/src/rpcn/: Client.cpp  Client.h  NPHandler.cpp  NPHandler.h  SignalingHandler.cpp  SignalingHandler.h  Types.h
plugins/Patchwork/: CMakeLists.txt
plugins/Patchwork/src/: Patchwork.cpp
sdk/zlib/: CMakeLists.txt
